<resources>
    <string name="app_name">SNAPP</string>

    <!-- Welcome Page !-->
    <string name="welcome_text">Welcome to your Personal Nutrition Manager!</string>
    <string name="signup_text">Get Started!</string>
    <string name="alternatelogin_text">Or if you already have an account: </string>

    <!-- Login Page !-->
    <string name="welcome_back">Welcome Back!</string>

    <!-- Sign up !-->
    <string name="create_text">Create a User!</string>
    <string name="age_text">Date of Birth</string>
    <string name="weight_text_metric">Current Weight (kg)</string>
    <string name="weight_text_imperial">Current Weight (lbs)</string>
    <string name="height_text_metric">Current Height (cm)</string>
    <string name="height_text_imperial">Current Height (feet and inches)</string>
    <string name="gender_text">Gender</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="avatar_text">Select an Avatar</string>

    <string name="goal_title">100 Day Goal</string>
    <string name="goalWeight_text_metric">Goal Weight (kg)</string>
    <string name="goalWeight_text_imperial">Goal Weight (lbs)</string>
    <string name="goalExercise_text">Exercise Goal</string>
    <string name="exercise_placeholder">Hours per Day</string>
    <string name="activityLevel_title">Average Daily Activity Level</string>
    <string name="activityLevelInfoButton"><a href="http://www.livestrong.com/article/401892-what-are-sedentary-moderate-high-activity-exercise-levels/">Not sure what you are? </a></string>
    <string name="spinner_title">Choose your activity level</string>

    <string-array name="activityLevel_array">
        <item>Sedentary</item>
        <item>Moderately Active</item>
        <item>Extremely Active</item>
    </string-array>

    <!-- Measurements Page !-->
    <string name="measurements_title">Measurements</string>
    <string name="arm_text_imperial">Arm (inches)</string>
    <string name="waist_text_imperial">Waist (inches)</string>
    <string name="thigh_text_imperial">Thigh (inches)</string>
    <string name="arm_text_metric">Arm (cm)</string>
    <string name="waist_text_metric">Waist (cm)</string>
    <string name="thigh_text_metric">Thigh (cm)</string>

    <!-- Profile Page !-->
    <string name="bmi_text">Current BMI</string>
    <string name="calories_text">Daily Calorie Count</string>
    <string name="progressPage">See Progress</string>

    <!-- Water Entry Page !-->
    <string name="water_entry_title">Daily Water Consumption</string>
    <string name="water_entry_info">Please click the cup for every 8 oz consumed, or enter yourself!</string>
    <string name="log_water_button">Log Water</string>

    <!-- com.example.nutrition.nutritionapp.Model.Food Entry Page !-->
    <string name="food_entry_title">Food Entry</string>
    <string name="food_entry_info">Please enter the food or beverage consumed</string>
    <string name="serving_size">Select your serving size</string>
    <string name="button_label_manual_enter">Enter Manually</string>
    <string-array name="servingSize_array">
        <item>0.25</item>
        <item>0.5</item>
        <item>0.75</item>
        <item>1.0</item>
        <item>1.25</item>
        <item>1.5</item>
        <item>1.75</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
    </string-array>
    <string-array name="measurement_array">
        <item>oz</item>
        <item>g</item>
        <item>mL</item>
    </string-array>
    <string name="log_food_button">Calculate Calories</string>

    <!-- Exercise Page !-->
    <string name="exercise_title">Exercise Tracker</string>
    <string name="type_text">Type of Exercise</string>
    <string name="duration_text">Duration</string>
    <string name="record_text">Record my Exercise</string>
    <string name="exercise_journal">View my Exercise Journal </string>

    <!-- Exercise Journal !-->
    <string name="journal_title">Exercise Journal</string>
    <string name="today_calories">Calories Burned Today</string>
    <string name="total_burned">Daily Total</string>

    <!-- Food Journal !-->
    <string name="fjournal_title">Food Journal </string>
    <string name="calores_consumed">Calories Consumed Today</string>
    <string name="total_consumed">Daily Total</string>

    <!-- Home Page !-->
    <string name="profileButton">Profile</string>

    <string-array name="exerciseType_array">
        <item>Walking</item>
        <item>Running</item>
        <item>Yoga</item>
        <item>Biking</item>
        <item>Swimming</item>
        <item>Other </item>
    </string-array>
    <string-array name="duration_array">
        <item>10 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>40 minutes</item>
        <item>50 minutes</item>
        <item>60 minutes</item>
    </string-array>
    <!-- Serving Page !-->
    <string name="grains_title">Grains</string>
    <string name="veggies_title">Vegetables</string>
    <string name="fruits_title">Fruits</string>
    <string name="dairy_title">Dairy</string>
    <string name="meat_title">Meat</string>
    <string name="sweet_title">Sweet</string>
    <string name="title">Enter your serving</string>
    <string name="servings_enter_button">Submit</string>

    <!-- Credits Page !-->
    <string name="credit_heading">Credits</string>
    <string name="icon_credits">Icon made by Madebyoliver from www.flaticon.com</string>
    <string name="developers">Developers:</string>
    <string name="vishnu">Vishnu Venkateswaran</string>
    <string name="phoenix">Phoenix Campos</string>
    <string name="jimmy">Jimmy Hsu</string>
    <string name="willa">Willa Zhao</string>
    <string name="vita">Vita Shubin</string>
    <string name="met">MET values were taken from ProCon.org</string>
    <string name="pyramid">Pyramid information was taken from HealthPromotion.ie</string>
    <string name="equation">Calories Burned Equations were taken from LIVESTRONG.com</string>

    <!-- Credits Page !-->
    <string name="weight_entry_heading">Weight Entry</string>

    <!-- General Strings !-->
    <string name="nextButtonText">Continue</string>
    <string name="startReachingText">Start reaching your goal!</string>
    <string name="name_text">Name</string>
    <string name="title_activity_profile">Profile</string>
    <string name="login_text">Login</string>
    <string name="logout_text">Logout</string>
    <string name="username_text">Email</string>
    <string name="password_text">Password</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="metric_unit_label">Metric</string>
    <string name="imperial_unit_label">Imperial</string>
    <string name="unit_switch_label">Units</string>
    <string name="profile_icon">Profile Icon</string>

    <!-- Drawer Items !-->
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_profile">Profile</string>
    <string name="drawer_item_graphs">Progress Graphs</string>
    <string name="drawer_item_logout">Logout</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_credits">Credits</string>

    <string name="selectUser">Select User</string>

    <!-- Food Calories Selection Page -->
    <string name="select_calorie_serving_type">Serving Type</string>
</resources>
