<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.fearnot.snapp.servingFragment"
    android:id="@+id/rl">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">
        <android.support.v7.widget.Toolbar
            android:id="@+id/servingEntryToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="@color/material_drawer_header_selection_text"
            />
        <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:text="@string/grains_title"
            android:layout_height="match_parent"
                android:layout_width="0dp"
            android:id="@+id/grainsText"
            android:layout_weight="1"
                android:gravity="center_vertical"
               />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/grainsEdit"
                android:layout_weight="1"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:text="@string/veggies_title"
                android:layout_height="match_parent"
                android:id="@+id/veggiesText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/veggieEdit"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:text="@string/fruits_title"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:id="@+id/fruitsText"
                android:gravity="center_vertical"
                android:layout_weight="1"
               />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/fruitsEdit"
                android:layout_weight="1"
                android:inputType="numberDecimal" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:text="@string/dairy_title"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:id="@+id/dairyText"
                android:gravity="center_vertical"
                android:layout_weight="1"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/dairyEdit"
                android:layout_weight="1"
                android:inputType="numberDecimal" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:text="@string/meat_title"
                android:layout_height="match_parent"
                android:id="@+id/meatText"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center_vertical"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/meatEdit"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:text="@string/sweet_title"
                android:layout_height="match_parent"
                android:id="@+id/sweetText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
               />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/sweetEdit"
                android:layout_weight="1"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <Button
            android:text="@string/servings_enter_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/enterButton" />

    </LinearLayout>
</FrameLayout>
